<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>rentasad.library.db</artifactId>
	<name>gustini.library.db</name>
	<url>http://maven.apache.org</url>
	<properties>
		<!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
		<project.build.sourceEncoding>CP1252</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<!-- <source>1.8</source> -->
					<release>15</release>
					<compilerArgs>
						--enable-preview
					</compilerArgs>
				</configuration>
			</plugin>
			<!-- The Maven-Surefire-Plugin is needed to make Unittests while building -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14.1</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<!-- <dependency> <scope>system</scope> <groupId>com.extendedsystems.jdbc.advantage</groupId> 
			<artifactId>adsjdbc</artifactId> <version>11.0</version> <systemPath>${basedir}\src\lib\adsjdbc11.0.jar</systemPath> 
			</dependency> -->

		<!-- <dependency> <scope>system</scope> <groupId>com.microsoft.sqlserver</groupId> 
			<artifactId>sqljdbc4</artifactId> <version>4.0</version> <systemPath>${basedir}\src\lib\microsoft\sqlserver\sqljdbc4\4.0\sqljdbc4-4.0.jar</systemPath> 
			</dependency> -->
		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>9.1.0.jre15-preview</version>
		</dependency>


		<!-- UPDATE 20.09.2018 Update nach Fehler in ServerTimeZone -> Fallback 
			zu alter Version https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.16</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>2.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>rentasad</groupId>
			<artifactId>rentasad.library.basicTools</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>rentasad</groupId>
			<artifactId>rentasad.library.configFileTool</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.extendedsystems.jdbc.advantage</groupId>
			<artifactId>adsjdbc</artifactId>
			<version>11.0</version>
		</dependency>
	</dependencies>

	<groupId>rentasad</groupId>
	<version>1.1.0</version>
</project>